aligning containers correctly

--- a/src/components/app/App.scss
+++ b/src/components/app/App.scss
@@ -20,7 +20,3 @@
   margin-left: 80px;
   background-color: #F4F4F9;
 }
-
-.container-fluid, .row {
-  height: 100%;
-}
