--- a/src/components/canvas/Canvas.scss
+++ b/src/components/canvas/Canvas.scss
@@ -1,10 +1,23 @@
 .Canvas.container {
-  margin-left: 0px;
+  margin-left: 30px;
   background-color: #F4F4F9;
+}
+
+.Header {
+  top: 0;
+  height: 20%;
+  width: 90%;
+  position: fixed;
+  background-color: #F4F4F9;
+  z-index: 1;
+  align-items: center;
+  color: #393D3F;
+  cursor: default;
 }
 
 .Summary {
   height: 40%;
+  width: 100%;
   margin-top: 15%;
   position: relative;
 }
@@ -12,5 +25,20 @@
 .Timeline {
   width: 100%;
   height: 40%;
+  // margin-top: 15%;
   position: relative;
+}
+
+.Divider {
+  background-color: #79A1B9;
+  height: 4px;
+  margin-left: -15px;
+  margin-top: 10px;
+}
+
+#sectionTitle {
+  font-size: 40px;
+  font-weight: lighter;
+  color: #393D3F;
+  margin-top: 40px;
 }
