--- a/src/components/canvas/Header.scss
+++ b/src/components/canvas/Header.scss
@@ -1,25 +1,9 @@
-.HeaderContainer {
-    top: 0;
-    height: 20%;
-    width: 100%;
-    position: fixed;
-    background-color: #F4F4F9;
-    z-index: 1;
-}
-
-.Header.row {
-    align-items: center;
-    color: #393D3F;
-    cursor: default;
-}
-
 .Title h1 {
     font-size: 60px;
     font-weight: lighter;
 }
 
-.Title h4 {
-    margin-top: -15px;
+.Title h5 {
     color: #393D3F;
 }
 
@@ -46,10 +30,4 @@
   
   .ContactButton:hover {
     background-color: #79A1B9;
-  }
-
-  .Divider {
-      background-color: #79A1B9;
-      height: 4px;
-      margin-left: -15px;
   }
