--- a/src/components/canvas/Summary.scss
+++ b/src/components/canvas/Summary.scss
@@ -1,8 +1,14 @@
 .ContactPhoto {
+    text-align: center;
+}
+
+.ContactPhoto img {
     max-height: 300px;
-    border: 4px solid #393D3F;
+    border-left: 4px solid #393D3F;
+    // border-style: double;
     margin: 10px;
-    padding: 8px;
+    padding: 4px;
+    // box-shadow: 8px 8px 5px grey;
   }
 
 #greeting {
