--- a/src/components/charts/Timeline.scss
+++ b/src/components/charts/Timeline.scss
@@ -1,3 +1,3 @@
-#Chart {
-  background-color: #FFFFFF
+.TimelineChart {
+  margin-top: 20px;
 }
